external-failover/1-se.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-dynamodb-svc
spec:
  hosts:
  - mydb.com
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  endpoints:
  - address: dynamodb.us-east-1.amazonaws.com
    locality: us-east4
    ports:
      http: 81
  - address: dynamodb.us-west-1.amazonaws.com
    locality: us-west
    ports:
      http: 80
